AX: WebKit crashes with VO and keyboard support fails on encapsulated radio button components. https://bugs.webkit.org/show_bug.cgi?id=208844 <rdar://problem/60252659>

Reviewed by Darin Adler.

Source/WebCore:

Test: accessibility/mac/crash-bounds-for-range.html

Don't access renderer if nil in getInlineBoxAndOffset.

* dom/Position.cpp:
(WebCore::Position::getInlineBoxAndOffset const):

LayoutTests:

* accessibility/mac/crash-bounds-for-range-expected.txt: Added.
* accessibility/mac/crash-bounds-for-range.html: Added.


Canonical link: https://commits.webkit.org/222123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258609 268f45cc-cd09-0410-ab3c-d52691b4dbfc